# ttscli

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/skills/product/: SKILL.md
.claude/skills/tts/: SKILL.md
.github/workflows/: pypi.yml
demo/: build.sh  build_narration.sh  narration_script.md  terminal_config.tape  terminal_speech.tape  terminal_voices.tape  transcript.md  ttscli_demo.tape
demo/intro/: package-lock.json  package.json  tailwind.config.js
demo/intro/src/: Root.tsx  TtsIntro.tsx  design.ts  narrationCues.ts
demo/intro/src/effects/: Backdrop.tsx  RhythmOverlay.tsx  TerminalChrome.tsx  Waveform.tsx
demo/intro/src/scenes/: CallToAction.tsx  FeatureHighlights.tsx  HowItWorks.tsx  LiveDemo.tsx  OpenClawStory.tsx
demo/narration/: 01_hook.txt  02_stars.txt  03_capabilities.txt  04_gap.txt  05_silence.txt  06_reveal.txt  08_engine.txt  09_backends.txt  10_one_command.txt  11_ready.txt  12_voice_cloning.txt  13_streaming.txt  14_model_sizes.txt  15_scriptable.txt  16_export.txt  17_apple_silicon.txt  18_demo_say.txt  19_demo_generate.txt  20_demo_clone.txt  21_github_cta.txt  22_star.txt  23_closing.txt  manifest.json
docs/: PUBLISH.md
tests/: conftest.py  test_cli.py  test_performance.py  test_say.py
tests/test_commands/: test_voice.py
ttscli/: __init__.py  __main__.py  audio.py  cli.py  commands.py  config.py  output_format.py  platform.py  storage.py  voices.py
ttscli/backends/: __init__.py  mlx.py  pytorch.py
