[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tts-cli"
version = "0.1.0"
description = "Command-line interface for text-to-speech with voice cloning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Voicebox Team" }
]
keywords = ["tts", "voice-cloning", "speech-synthesis", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "soundfile>=0.12.1",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0,<2.0.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
pytorch = [
    "torch>=2.1.0",
    "qwen-tts>=0.1.0",
    "transformers>=4.36.0",
    "librosa>=0.10.0",
    "scipy>=1.11.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "pillow>=10.0.0",
]
mlx = [
    "mlx>=0.5.0",
    "mlx-audio>=0.3.0",
    "librosa>=0.10.0",
]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "psutil>=5.9.0",
    "black>=24.3.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ttscli"
Repository = "https://github.com/your-org/ttscli"
Issues = "https://github.com/your-org/ttscli/issues"
Changelog = "https://github.com/your-org/ttscli/blob/main/CHANGELOG.md"

[project.scripts]
tts = "ttscli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ttscli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
